# star-rail-parser

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
src/star_rail_parser/: __init__.py  lightcone.py  relic.py  stat.py
star_rail_parser/: ability.py  character.py  lightcone.py  relic.py  relic_set.py  skilltree.py  trailblazer.py
tests/: tests.py
